virtual-service-userprofile-3x33-503.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userprofile
  namespace: user1
spec:
  hosts:
    - userprofile
  http:
    - fault:
        abort:
          httpStatus: 503
          percentage:
            value: 50
      route:
        - destination:
            host: userprofile
            subset: v1
          weight: 33
        - destination:
            host: userprofile
            subset: v2
          weight: 33
        - destination:
            host: userprofile
            subset: v3
          weight: 33
    - route:
        - destination:
            host: userprofile
            subset: v1
          weight: 33
        - destination:
            host: userprofile
            subset: v2
          weight: 33
        - destination:
            host: userprofile
            subset: v3
          weight: 33
